# MLOps-Filnal-Assignment

./: .gitignore  Makefile  README.md  mlflow.db  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: predict.yaml  train.yaml
DSML/: config.py  predict.py  preproc.py  train.py
mlruns/0/: meta.yaml
mlruns/635414797718689769/: meta.yaml
mlruns/635414797718689769/0ac2b3bed7ba470aa1d7031fe4db5bdb/: meta.yaml
mlruns/635414797718689769/33312164291b44e4b4b04045fdcfc48c/: meta.yaml
mlruns/635414797718689769/37f2cf2d8b964d28b228bdabf5645072/: meta.yaml
mlruns/635414797718689769/3dbed54a294341c8b36f78d2e8fb7915/: meta.yaml
mlruns/635414797718689769/462c16ffa69d4325b9d87ba546b27abf/: meta.yaml
mlruns/635414797718689769/501798f4688f41e3908f4e317b666db2/: meta.yaml
mlruns/635414797718689769/737efb2cff2c48d48276347f950488b3/: meta.yaml
mlruns/635414797718689769/83fa6f4d6fe9475b8ce06c664146d824/: meta.yaml
mlruns/635414797718689769/9838d900fbc948f4b4f0205db944ea66/: meta.yaml
mlruns/635414797718689769/9b74828406274f7fafcd8a3f27c70e02/: meta.yaml
mlruns/635414797718689769/a1884b8de30b415aa41a17ee04a36737/: meta.yaml
mlruns/635414797718689769/a9a5a62657fc479f827f50d96002eb4e/: meta.yaml
mlruns/635414797718689769/bca4b1a54cff4417981a9abc69dfe4e4/: meta.yaml
mlruns/635414797718689769/c926ec62f80d49898f3cd24ff0816e8b/: meta.yaml
mlruns/882018557220663914/: meta.yaml
models/: best_params.pkl  catboost_model_titanic.cbm  cv_results.csv  model_params.pkl
notebooks/: Test.ipynb
(+166 files in other folders)
