[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "DSML"
version = "0.0.1"
description = "Trying to predict if employee is likely to leave the company"
authors = [
  { name = "Karolina" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["DSML"]
include = ["pyproject.toml", "DSML/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["DSML"]
force-sort-within-sections = true

